
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+common
    Path for the help files changed to doc/help.
+help
    help moved to the doc/help.
+doc
    Separated from KiCad source code to the trunk/kicad-doc.
+library
+modules
    Separated from KiCad source code to the trunk/kicad-library.


2008-Mar-3 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Completed transision to BOARD::GetLayerName() and away from ReturnPcbLayerName().
    LayerNames and LAYER_T are saved int the *.brd file and may be edited
    there with a text editor until the UI is in place to edit them in PCBNEW.
    To understand the strategy, see BOARD::GetLayerName() in class_board.cpp
    and see WinEDA_BasePcbFrame::ReadSetup().  I will be adding "Board" menu
    item to Preferences, but there is more to come before the UI gets done:
    net classes.
  * Clear_Pcb() now deletes the existing BOARD() and new's a new BOARD() so that
    the default BOARD::m_Layer[] values can be set in the new BOARD's constructor.


2008-mars-03 UPDATE Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
3d display:
    Added Jonas Diemer's patch (enhanced movings from mouse and tools)


2008-Mar-1 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    Changed ioascii.cpp to save and load board specific layer names, for DEBUG
    build only. I want to add class LAYER, see below. Added
    BOARD::SetLayerName(), BOARD::SetLayerType(), and BOARD::GetLayerType().
    Will add a UI for editing those soon as soon class LAYER is stable. The