@@ -5,6 +5,12 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Mar-3 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++pcbnew
+	Solved problem in fill zone calculations when using buried or blind vias (like micro vias)
+
+
 2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
 ================================================================================
 +common
